@@ -18,17 +18,17 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
         <TopLine Value="133"/>
-        <CursorPos X="21" Y="149"/>
+        <CursorPos X="61" Y="164"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSharedUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
-        <TopLine Value="61"/>
-        <CursorPos X="23" Y="82"/>
-        <FoldState Value=" T3k70W4 pk0kg0L1 PUN0V"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="45"/>
+        <CursorPos X="12" Y="84"/>
+        <FoldState Value=" T3k80W4 pk0kg0L1 PUN0K"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -61,11 +61,10 @@
       <Unit>
         <Filename Value="BDPPaletteUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="177"/>
         <CursorPos X="36" Y="379"/>
         <UsageCount Value="185"/>
-        <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPImageUnit.pas"/>
@@ -79,7 +78,7 @@
       <Unit>
         <Filename Value="BDPDrawAreaUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="6"/>
         <CursorPos X="15" Y="41"/>
         <UsageCount Value="176"/>
         <Loaded Value="True"/>
@@ -112,11 +111,10 @@
       <Unit>
         <Filename Value="BDPToolsUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="1070"/>
         <CursorPos Y="1087"/>
         <UsageCount Value="160"/>
-        <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPInksUnit.pas"/>
@@ -179,17 +177,16 @@
       <Unit>
         <Filename Value="BDPSliderUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="-1"/>
         <CursorPos Y="54"/>
         <UsageCount Value="66"/>
-        <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMenuUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="5"/>
         <TopLine Value="186"/>
-        <CursorPos Y="206"/>
+        <CursorPos Y="218"/>
         <FoldState Value=" T7CBI1 PDOC T3iE0I916 Pk0mP0@"/>
         <UsageCount Value="39"/>
         <Loaded Value="True"/>
@@ -401,15 +398,7 @@
         <UsageCount Value="9"/>
       </Unit>
     </Units>
-    <JumpHistory HistoryIndex="29">
-      <Position>
-        <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="155" TopLine="133"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPImageUnit.pas"/>
-        <Caret Line="929" TopLine="907"/>
-      </Position>
+    <JumpHistory HistoryIndex="26">
       <Position>
         <Filename Value="BDPImageUnit.pas"/>
         <Caret Line="930" TopLine="907"/>
@@ -511,16 +500,12 @@
         <Caret Line="976" Column="24" TopLine="935"/>
       </Position>
       <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="1087" TopLine="1073"/>
+        <Filename Value="BDPSharedUnit.pas"/>
+        <Caret Line="67" Column="9" TopLine="61"/>
       </Position>
       <Position>
-        <Filename Value="BDPPaletteUnit.pas"/>
-        <Caret Line="373" TopLine="177"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPPaletteUnit.pas"/>
-        <Caret Line="379" Column="36" TopLine="177"/>
+        <Filename Value="BDPSharedUnit.pas"/>
+        <Caret Line="68" Column="14" TopLine="45"/>
       </Position>
     </JumpHistory>
     <RunParams>
